# docs/swagger.json
@@ -15,12 +15,15 @@
         "/test/txinfo": {
             "get": {
                 "description": "描述信息：根据哈希获取交易信息,参数是交易的哈希值",
+                "tags": [
+                    "测试"
+                ],
                 "summary": "摘要：根据哈希获取交易信息,参数是交易的哈希值",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "交易的哈希值",
-                        "name": "txHash",
+                        "name": "txhash",
                         "in": "query",
                         "required": true
                     }
@@ -62,7 +65,20 @@
                         "required": true
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "用户名更改成功",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "请求体格式错误",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrResponse"
+                        }
+                    }
+                }
             }
         },
         "/user/gnfts": {
@@ -82,7 +98,7 @@
                 "tags": [
                     "用户管理"
                 ],
-                "summary": "用户编辑用户名",
+                "summary": "获取用户的藏品（对他可见的数据）",
                 "parameters": [
                     {
                         "type": "string",
@@ -164,10 +180,46 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户认证"
+                    "用户管理"
                 ],
                 "summary": "用户登录",
-                "responses": {}
+                "parameters": [
+                    {
+                        "description": "登录请求",
+                        "name": "loginRequest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.LoginReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功登录，返回 JWT 令牌",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "地址非法或无效",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "签名验证失败",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrResponse"
+                        }
+                    },
+                    "503": {
+                        "description": "服务不可用，获取nonce失败",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrResponse"
+                        }
+                    }
+                }
             }
         },
         "/user/logout": {
@@ -182,10 +234,23 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户认证"
+                    "用户管理"
                 ],
                 "summary": "用户登出",
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "成功登出",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/dto.ErrResponse"
+                        }
+                    }
+                }
             }
         },
         "/user/nonce/{user_address}": {
@@ -195,7 +260,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "用户认证"
+                    "用户管理"
                 ],
                 "summary": "用户获取nonce",
                 "parameters": [
@@ -230,7 +295,7 @@
             }
         },
         "/user/profile": {
-            "post": {
+            "get": {
                 "security": [
                     {
                         "JwtAuth": []
@@ -241,7 +306,7 @@
                     "application/json"
                 ],
                 "produces": [
-                    "application/json"
+                    "image/png"
                 ],
                 "tags": [
                     "用户管理"
@@ -254,13 +319,20 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "\"1.png\"",
+                        "description": "用户头像的路径",
+                        "name": "padd",
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "用户头像图片文件",
                         "schema": {
-                            "$ref": "#/definitions/dto.Response"
+                            "type": "file"
                         }
                     },
                     "400": {
@@ -270,7 +342,7 @@
                         }
                     },
                     "503": {
-                        "description": "mysql异常",
+                        "description": "服务不可用，数据库异常",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrResponse"
                         }
@@ -287,7 +359,7 @@
                 ],
                 "description": "根据用户地址更新用户头像",
                 "consumes": [
-                    "application/json"
+                    "multipart/form-data"
                 ],
                 "produces": [
                     "application/json"
@@ -303,11 +375,25 @@
                         "name": "Authorization",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "type": "file",
+                        "description": "用户头像文件",
+                        "name": "profile",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "用户地址",
+                        "name": "user_address",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "测试环境返回图片文件！",
+                        "description": "头像上传成功",
                         "schema": {
                             "$ref": "#/definitions/dto.Response"
                         }
@@ -319,7 +405,7 @@
                         }
                     },
                     "503": {
-                        "description": "mysql异常",
+                        "description": "服务不可用，数据库异常",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrResponse"
                         }
@@ -336,6 +422,21 @@
                     "type": "integer"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.LoginReq": {
+            "type": "object",
+            "required": [
+                "signature",
+                "user_address"
+            ],
+            "properties": {
+                "signature": {
+                    "type": "string"
+                },
+                "user_address": {
                     "type": "string"
                 }
             }
